k8s_deploy/manifests/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tialabs-frontend
  namespace: "tiacourses"
spec:
  selector:
    matchLabels:
      app: tialabs-frontend
  template:
    metadata:
      labels:
        app: tialabs-frontend
    spec:
      containers:
      - name: tialabs-frontend
        image: tialabs-frontend
        # image: tiacloudconregdev.azurecr.io/tialabs-api:10-20-2023-02-00-03
        ports:
        - containerPort: 3000
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: tialabs-frontend
  namespace: tiacourses 
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tialabs-frontend.tiapod.tiacloud.dev
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: tialabs-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  labels:
    app: tialabs-frontend
  name: tialabs-frontend
  namespace: tiacourses
spec:
  rules:
  - host: tialabs-frontend.tiapod.tiacloud.dev
    http:
      paths:
      - backend:
          service:
            name: tialabs-frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tialabs-frontend.tiapod.tiacloud.dev
    secretName: tiacourses.tls.wildcard.tiapod.tiacloud.dev
